--- a/css/styles.css
+++ b/css/styles.css
@@ -1,116 +1,113 @@
-:root {
-    --background-card-color: hsl(0, 0%, 100%);
-    --background-color: hsl(47, 88%, 63%);
-    --border-color: hsl(0, 0%, 7%);
-    --paragraph-color: hsl(0, 0%, 42%);
-    --title-color: hsl(0, 0%, 7%);
-
-
-}
+@import "_variables.css";
+@import "normalize.css";
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Figtree', sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
+  font-family: var(--font-family);
+  font-size: var(--font-size-main);
+  line-height: var(--line0height);
 }
 
-h1,h2,h3,h4,h5,h6 {
-    font-weight: 800;
-    color: var(--title-color);
-    line-height: 1.5;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: var(--font-weight-bold);
+  color: var(--title-color);
+  line-height: var(--line-height);
 }
 
 p {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    color: var(--paragraph-color);
+  font-weight: var(--font-weight);
+  font-size: var(--font-size-main);
+  line-height: var(--line-height);
+  color: var(--paragraph-color);
 }
 
 .container {
-    background-color: var(--background-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;;
+  background-color: var(--background-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 .blog-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 24px;
-    border: 1px var(--border-color) solid;
-    border-radius: 20px;
-    width: 384px;
-    height: auto;
-    background-color: var(--background-card-color);
-    box-shadow: 8px 8px 0 0 rgba(0, 0, 0, 1);
-    gap: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 24px;
+  border: 1px var(--border-color) solid;
+  border-radius: 20px;
+  width: 384px;
+  height: auto;
+  background-color: var(--background-card-color);
+  box-shadow: 8px 8px 0 0 rgba(0, 0, 0, 1);
+  gap: 24px;
 }
 
 .image-wrapper {
-    width: 100%;
-    height: auto;
-    margin: 0 auto 0 auto;
+  width: 100%;
+  height: auto;
+  margin: 0 auto 0 auto;
 }
 
-.image-wrapper  > .image {
-    width: 100%;
-    height: auto;
-    border: 1px var(--border-color) solid;
-    border-radius: 10px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-   
+.image-wrapper > .image {
+  width: 100%;
+  height: auto;
+  border: 1px var(--border-color) solid;
+  border-radius: 10px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 .article {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .category {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 800;
-    font-size: 14px;
-    width: 82px;
-    height: 29px;
-    background-color: var(--background-color);
-    padding: 12px 4px;
-    border-radius: 4px;
-    color: var(--title-color);
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-small);
+  width: 82px;
+  height: 29px;
+  background-color: var(--background-color);
+  padding: 12px 4px;
+  border-radius: 4px;
+  color: var(--title-color);
+  text-align: center;
 }
 
 .date {
-    color: var(--title-color);
-    font-size: 14px;
-    font-weight: 500;
+  color: var(--title-color);
+  font-size: var(--font-size-small);
+  font-weight: var(--font-weight);
 }
 
 .title {
-    font-size: 24px;
+  font-size: var(--font-size-big);
 }
 
 .footer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 12px;
 }
 
 .footer > .author {
-    color: var(--title-color);
-    font-size: 14px;
-    font-weight: 800;
+  color: var(--title-color);
+  font-size: var(--font-size-small);
+  font-weight: var(--font-weight-bold);
 }
