--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
-@import "_variables.css";
 @import "normalize.css";
+@import "_variables.css";
+@import "_main-article.css";
+@import "_footer.css";
+@import "_responsiveness.css";
 
 * {
   margin: 0;
@@ -20,94 +23,22 @@ h4,
 h5,
 h6 {
   font-weight: var(--font-weight-bold);
-  color: var(--title-color);
+  color: var(--color-title);
   line-height: var(--line-height);
 }
 
 p {
-  font-weight: var(--font-weight);
+  font-weight: var(--font-weight-regular);
   font-size: var(--font-size-main);
   line-height: var(--line-height);
-  color: var(--paragraph-color);
+  color: var(--color-paragraph);
 }
 
 .container {
-  background-color: var(--background-color);
+  background-color: var(--color-background-accent);
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
-}
-
-.blog-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 24px;
-  border: 1px var(--border-color) solid;
-  border-radius: 20px;
-  width: 384px;
-  height: auto;
-  background-color: var(--background-card-color);
-  box-shadow: 8px 8px 0 0 rgba(0, 0, 0, 1);
-  gap: 24px;
-}
-
-.image-wrapper {
-  width: 100%;
-  height: auto;
-  margin: 0 auto 0 auto;
-}
-
-.image-wrapper > .image {
-  width: 100%;
-  height: auto;
-  border: 1px var(--border-color) solid;
-  border-radius: 10px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-}
-
-.article {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.category {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: var(--font-weight-bold);
-  font-size: var(--font-size-small);
-  width: 82px;
-  height: 29px;
-  background-color: var(--background-color);
-  padding: 12px 4px;
-  border-radius: 4px;
-  color: var(--title-color);
-  text-align: center;
-}
-
-.date {
-  color: var(--title-color);
-  font-size: var(--font-size-small);
-  font-weight: var(--font-weight);
-}
-
-.title {
-  font-size: var(--font-size-big);
-}
-
-.footer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 12px;
-}
-
-.footer > .author {
-  color: var(--title-color);
-  font-size: var(--font-size-small);
-  font-weight: var(--font-weight-bold);
 }
