--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -26,6 +26,10 @@
   --gap-medium: 16px;
   --gap-large: 24px;
 
+  --border-radius-small: 4px;
+  --border-radius-medium: 10px;
+  --border-radius-big: 20px;
+
   /* Shadows */
   --shadow-card: 8px 8px 0 0 rgba(0, 0, 0, 1);
   --shadow-image: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
