css improvements for mobile responsiveness

--- a/css/_responsiveness.scss
+++ b/css/_responsiveness.scss
@@ -31,16 +31,16 @@
   align-items: flex-end;
 }
 
-/* Tablet Screens (768px - 1024px) */
-@media (max-width: 1024px) {
-}
-
 /* Mobile Screens (375px - 768px) */
 @media (max-width: 768px) {
   :root {
     --font-size-main: 0.875rem; /* 14px if 1rem = 16px */
     --font-size-small: 0.75rem; /* 12px */
     --font-size-big: 1.25rem; /* 20px */
+  }
+
+  .blog-wrapper {
+    width: clamp(301px, 90%, 327px);
   }
 }
 
@@ -50,6 +50,10 @@
     --font-size-main: 0.8125rem; /* 13px */
     --font-size-small: 0.6875rem; /* 11px */
     --font-size-big: 1.125rem; /* 18px */
+  }
+
+  .blog-wrapper {
+    max-width: 327px;
   }
 }
 
