--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,9 @@ template {
   --gap-small: 12px;
   --gap-medium: 16px;
   --gap-large: 24px;
+  --border-radius-small: 4px;
+  --border-radius-medium: 10px;
+  --border-radius-big: 20px;
   /* Shadows */
   --shadow-card: 8px 8px 0 0 rgba(0, 0, 0, 1);
   --shadow-image: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
@@ -153,8 +156,9 @@ template {
 .blog-wrapper {
   padding: clamp(var(--spacing-small), 5%, var(--spacing-large));
   border: 1px var(--color-border) solid;
-  border-radius: 20px;
-  width: clamp(320px, 90%, 384px);
+  border-radius: var(--border-radius-big);
+  width: clamp(301px, 90%, 384px);
+  max-width: 384px;
   height: auto;
   background-color: var(--color-background-card);
   box-shadow: var(--shadow-card);
@@ -170,7 +174,7 @@ template {
   width: 100%;
   height: auto;
   border: 1px var(--color-border) solid;
-  border-radius: 10px;
+  border-radius: var(--border-radius-medium);
   box-shadow: var(--shadow-image);
 }
 
@@ -185,7 +189,7 @@ template {
   height: 29px;
   background-color: var(--color-background-accent);
   padding: var(--spacing-small) var(--spacing-extra-small);
-  border-radius: 4px;
+  border-radius: var(--border-radius-small);
   color: var(--color-title);
   text-align: center;
 }
@@ -246,13 +250,15 @@ template {
   align-items: flex-end;
 }
 
-/* Tablet Screens (768px - 1024px) */
 /* Mobile Screens (375px - 768px) */
 @media (max-width: 768px) {
   :root {
     --font-size-main: 0.875rem; /* 14px if 1rem = 16px */
     --font-size-small: 0.75rem; /* 12px */
     --font-size-big: 1.25rem; /* 20px */
+  }
+  .blog-wrapper {
+    width: clamp(301px, 90%, 327px);
   }
 }
 /* Small Mobile Screens (up to 480px) */
@@ -261,6 +267,9 @@ template {
     --font-size-main: 0.8125rem; /* 13px */
     --font-size-small: 0.6875rem; /* 11px */
     --font-size-big: 1.125rem; /* 18px */
+  }
+  .blog-wrapper {
+    max-width: 327px;
   }
 }
 /* Small Mobile Screens (up to 480px) */
