--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -5,7 +5,7 @@
   gap: var(--gap-small);
 }
 
-.footer > .author {
+.footer > .blog-author {
   color: var(--color-title);
   font-size: var(--font-size-small);
   font-weight: var(--font-weight-bold);
