--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -5,6 +5,7 @@
   --color-border: hsl(0, 0%, 7%);
   --color-paragraph: hsl(0, 0%, 42%);
   --color-title: hsl(0, 0%, 7%);
+  --color-hover-onclick: hsl(47, 88%, 63%);
 
   /* Typography */
   --font-family: "Figtree", sans-serif;
