--- a/css/_main-article.scss
+++ b/css/_main-article.scss
@@ -50,3 +50,15 @@
   margin: 0;
   outline: none;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
